--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "Microformats",
     "Markup",
     "SEO",
-    "Google"
+    "Google",
+    "Search Engine"
   ],
   "homepage": "http://www.uebi.com.br",
   "license": "MIT",
