--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     {
       "name": "Sérgio Danilo Jr",
       "email": "sergiodanilojr@hotmail.com",
+      "homepage": "https://www.sergiodanilojr.com.br",
       "role": "Developer"
     }
   ],
