--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "name": "elephpant/structured-data",
   "description": "Structured Data (schema.org) is a set of extensible schemas makes it easier for webmasters and developers to embed  structured data on their web pages for use by search engines and other applications.",
   "keywords": [
+    "ElePHPant",
     "Structured Data",
     "Schema.org",
     "Rich Snippets",
